k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  namespace: myapp-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp-container
        image: gerops/mytestrepo:cfe4d8abcb78eb60a32b90ada3d57c67b2fecda31
        ports:
        - containerPort: 8080
        resources: 
          requests:
            cpu: 100m
            memory: 250Mi
          limits: 
            cpu: 100m
            memory: 250Mi
